# todo_practice

./: .env  Dockerfile  README.md  compose.yaml  pyproject.toml
todo_practice/: auth.py  db.py  main.py  models.py  setting.py
todo_practice/route/: user.py
